--- a/manifest.json
+++ b/manifest.json
@@ -3,4 +3,6 @@
     "tests/manifest/js/a.js",
     "tests/manifest/js/b.js",
     "tests/manifest/js/c.js",
-    "tests/manifest/js/d.js"]}
+    "tests/manifest/js/d.js"
+  ]
+}
